--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,14 @@
+ :root{
+    --heading-background-color: #f06;
+    --heading-text-color: #333;
+    --heading-font: 'Montserratt' , Helvetica, sans-serif;
+    --padding: 1rem;
+    --border: 1px solid rgb(0, 0, 0, 0.1);
+
+ }
+
+ /* This is a navigation line  */
+ 
  nav {
     background-color: steelblue;
     padding: 10px;
@@ -13,6 +24,9 @@ nav a {
 h1 {
     color: steelblue;
 }
+
+/* This is the main page */
+
 main img {
     max-width: 840px;
     width: 150px;
@@ -40,7 +54,7 @@ aside img {
     width: 200px;
     height: auto;
 }
-
+/* This is the footer */
 footer {
     margin-top: 15px;
     border-top: 1px solid #000;
